# Elemental

./: CMakeLists.txt  Hydrogen_ReleaseNotes.txt  README.md
include/El/core/DistMatrix/: Abstract.hpp  AbstractDistMatrix.hpp  Block.hpp  CMakeLists.txt  ElementMatrix.hpp
src/: CMakeLists.txt
src/blas_like/: CMakeLists.txt  blocksizes.cpp
src/blas_like/level1/: CMakeLists.txt  ColumnMinAbs.cpp  ColumnNorms.cpp  Copy.cpp  HilbertSchmidt.cpp  Max.cpp  MaxAbs.cpp  MaxAbsLoc.cpp  MaxLoc.cpp  Min.cpp  MinAbsLoc.cpp  MinLoc.cpp  NormsFromScaledSquares.hpp  RowMinAbs.cpp  RowNorms.cpp  Swap.cpp  Symmetric2x2Inv.cpp  Transform2x2.cpp
src/blas_like/level2/: ApplyGivensSequence.cpp  CMakeLists.txt  Gemv.cpp  Ger.cpp  Geru.cpp  Hemv.cpp  Her.cpp  Her2.cpp  QuasiTrsv.cpp  Symv.cpp  Syr.cpp  Syr2.cpp  Trmv.cpp  Trr.cpp  Trr2.cpp  Trsv.cpp
src/blas_like/level2/Gemv/: Normal.hpp  Transpose.hpp
src/blas_like/level3/: CMakeLists.txt  Gemm.cpp  Hemm.cpp  Her2k.cpp  Herk.cpp  HermitianFromEVD.cpp  MultiShiftQuasiTrsm.cpp  MultiShiftTrsm.cpp  NormalFromEVD.cpp  QuasiTrsm.cpp  SafeMultiShiftTrsm.cpp  Symm.cpp  SyncInfoPool.hpp  Syr2k.cpp  Syrk.cpp  Trdtrmm.cpp  Trmm.cpp  Trr2k.cpp  Trrk.cpp  Trsm.cpp  Trstrm.cpp  Trtrmm.cpp  TwoSidedTrmm.cpp  TwoSidedTrsm.cpp  sync_info_pool_test.cpp
src/blas_like/level3/Gemm/: NN.hpp  NN_Multistream.hpp  NT.hpp  NT_Multistream.hpp  TN.hpp  TN_Multistream.hpp  TT.hpp
src/blas_like/level3/Symm/: RL.hpp  RU.hpp
src/blas_like/level3/Trrk/: Local.hpp
src/blas_like/level3/Trsm/: LLN.hpp  LLT.hpp  LUN.hpp  LUT.hpp  RLN.hpp  RLT.hpp  RUN.hpp  RUT.hpp
src/control/: Lyapunov.cpp  Riccati.cpp  Sylvester.cpp
src/core/: CMakeLists.txt  DistMap.cpp  Element.cpp  Grid.cpp  MemoryPool.cpp  Profiling.cpp  callStack.cpp  environment.cpp  mpi_register.cpp  random.cpp
src/core/DistMatrix/: Abstract.cpp  AbstractDistMatrix.cpp  Block.cpp  CMakeLists.txt  Element.cpp  ElementMatrix.cpp
src/core/DistMatrix/Block/: CIRC_CIRC.cpp  MC_MR.cpp  MC_STAR.cpp  MD_STAR.cpp  MR_MC.cpp  MR_STAR.cpp  STAR_MC.cpp  STAR_MD.cpp  STAR_MR.cpp  STAR_STAR.cpp  STAR_VC.cpp  STAR_VR.cpp  VC_STAR.cpp  VR_STAR.cpp  setup.hpp
src/core/DistMatrix/Element/: STAR_MD.cpp  STAR_STAR.cpp  STAR_VR.cpp  VC_STAR.cpp  VR_STAR.cpp  setup.hpp
src/core/DistMatrix/ElementMatrix/: CIRC_CIRC.cpp  MC_MR.cpp  MC_STAR.cpp  MD_STAR.cpp  MR_MC.cpp  MR_STAR.cpp  STAR_MC.cpp  STAR_MD.cpp  STAR_MR.cpp  STAR_STAR.cpp  STAR_VC.cpp  STAR_VR.cpp  VC_STAR.cpp  VR_STAR.cpp  gpu_instantiate.h  setup.hpp
src/core/FlamePart/: CMakeLists.txt  Merge.cpp  Partition.cpp  Repartition.cpp  SlidePartition.cpp
src/core/imports/: CMakeLists.txt  cub.cpp  cublas.cpp  cuda.cpp  lapack.cpp  mpi.cpp  mpi_collectives.hpp  mpi_utils.hpp
src/core/imports/blas/: Axpy.hpp  Copy.hpp  Dot.hpp  Gemm.hpp  Gemv.hpp  Nrm.hpp  Scal.hpp  Swap.hpp  Syr.hpp  Syrk.hpp  Trsm.hpp  Trsv.hpp
src/core/imports/mpi/: AllGather.hpp  AllReduce.hpp  AllToAll.hpp  Broadcast.hpp  Gather.hpp  Reduce.hpp  ReduceScatter.hpp  Scatter.hpp  SendRecv.hpp
src/hydrogen/: CMakeLists.txt  Error.cpp
src/hydrogen/blas/: CMakeLists.txt
src/hydrogen/blas/gpu/: Axpy.cu  CMakeLists.txt  Copy.cu  Fill.cu  Hadamard.cu  Scale.cu  Transpose.cu
src/hydrogen/device/: CMakeLists.txt  CUDA.cpp  GPU.cpp  ROCm.cpp  cuBLAS.cpp  cuBLAS_API.cpp  cuSOLVER.cpp  cuSOLVER_API.cpp  rocBLAS.cpp  rocBLAS_API.cpp  rocSOLVER.cpp  rocSOLVER_API.cpp
src/io/: Display.cpp  Print.cpp  Read.cpp  Spy.cpp  Write.cpp
src/lapack_like/: CMakeLists.txt
src/lapack_like/condense/: Bidiag.cpp  CMakeLists.txt  HermitianTridiag.cpp  Hessenberg.cpp
src/lapack_like/condense/HermitianTridiag/: ApplyQ.hpp  CMakeLists.txt  LowerBlocked.hpp  UpperBlocked.hpp
src/lapack_like/equilibrate/: GeomEquil.cpp  RuizEquil.cpp  SymmetricDiagonalEquil.cpp  SymmetricGeomEquil.cpp  SymmetricRuizEquil.cpp
src/lapack_like/euclidean_min/: GLM.cpp  LSE.cpp  LeastSquares.cpp  Ridge.cpp  Tikhonov.cpp
src/lapack_like/factor/: CMakeLists.txt  Cholesky.cpp  GQR.cpp  GRQ.cpp  ID.cpp  LDL.cpp  LQ.cpp  LU.cpp  QR.cpp  RQ.cpp  Skeleton.cpp
src/lapack_like/factor/Cholesky/: LowerMod.hpp  LowerVariant3.hpp  PivotedLowerVariant3.hpp  PivotedUpperVariant3.hpp  UpperMod.hpp  (+1 more)
src/lapack_like/funcs/: HermitianFunction.cpp  Pseudoinverse.cpp  Sign.cpp  SquareRoot.cpp
src/lapack_like/perm/: CMakeLists.txt  DistPermutation.cpp  Permutation.cpp
src/lapack_like/props/: Condition.cpp  Determinant.cpp  Inertia.cpp  Norm.cpp  Trace.cpp
src/lapack_like/reflect/: ApplyPacked.cpp  CMakeLists.txt  ExpandPacked.cpp  Householder.cpp  Hyperbolic.cpp
src/lapack_like/solve/: HPD.cpp  Hermitian.cpp  Linear.cpp  MultiShiftHess.cpp  SQSD.cpp  Symmetric.cpp
src/lapack_like/spectral/: BidiagSVD.cpp  CMakeLists.txt  CubicSecular.cpp  HermitianEig.cpp  HermitianGenDefEig.cpp  HermitianSVD.cpp  HermitianTridiagEig.cpp  HessenbergSchur.cpp  ImageAndKernel.cpp  Polar.cpp  Pseudospectra.cpp  SVD.cpp  Schur.cpp  SecularEVD.cpp  SecularSVD.cpp  SkewHermitianEig.cpp  TriangEig.cpp
src/lapack_like/util/: CMakeLists.txt  Median.cpp  Sort.cpp
src/matrices/deterministic/: CMakeLists.txt
tests/: CMakeLists.txt
tests/blas_like/: Axpy.cpp  BasicGemm.cpp  CMakeLists.txt  ColumnNorms.cpp  Dot.cpp  EntrywiseMap.cpp  Gemm.cpp  Gemm_Suite.cpp  Gemv.cpp  Hadamard.cpp  MultiShiftQuasiTrsm.cpp  MultiShiftTrsm.cpp  QuasiTrsm.cpp  SafeMultiShiftTrsm.cpp  Symm.cpp  Symv.cpp  Syr2k.cpp  Syrk.cpp  Trmm.cpp  Trsm.cpp  Trsv.cpp  TwoSidedTrmm.cpp  TwoSidedTrsm.cpp
tests/blas_like/GemmHelpers/: SyncTimer.hpp
tests/core/: BasicBlockDistMatrix.cpp  CMakeLists.txt  Constants.cpp  DifferentGrids.cpp  DifferentGridsGeneralAllreduce.cpp  DifferentGridsGeneralBroadcastAll.cpp  DifferentGridsGeneralGather.cpp  DifferentGridsGeneralScatter.cpp  DistMatrix.cpp  HEM.cpp  Matrix.cpp  Pow.cpp  SafeDiv.cpp  Version.cpp
tests/lapack_like/: CMakeLists.txt  HermitianEig.cpp
unit_test/: CMakeLists.txt  SequentialCatchMain.cpp  copy_cpu_gpu_half_test.cpp  copy_cpu_gpu_test.cpp  gpu_combine_test.cu  gpu_entrywise_map_test.cu  gpu_test.cpp  matrix_test.cpp
(+338 files in other folders)
